fixed height alignments

--- a/JS_DataHandling/style.css
+++ b/JS_DataHandling/style.css
@@ -4,6 +4,7 @@ body{
     margin: auto;
 }
 .container {
+    height: 60vh;
     display: flex;
     border: 2px solid black;
     margin: 100px;
@@ -12,23 +13,8 @@ body{
 
 
 }
-.col-9 {
-    
-    align-self: stretch;
-}
-.form-row{
-    margin: 20px;
-}
-.col-3{
-     
-    border-left: 1px solid black;
-    background-color:linen;
+
+#sample-chart{
+    height: 100%;
 }
 
-.form-row {
-    padding:10px;
-    border: 1px solid black;
-}
-.custom-select {
-    min-width:100%;
-  }
